<resources>
    <string name="app_name">WoTui</string>


    <string name="wo_tui">WOTUI</string>


    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>


    <string name="input_tip">type text for pushing</string>

    <string name="push">Push</string>
    <string name="clear">Clear</string>
    <string name="pull">Pull</string>
    <string name="copy">Copy</string>

    <string name="tab_main">WoTui</string>
    <string name="tab_setting">About</string>

    <string name="about">About</string>
    <string name="quit">quit</string>
</resources>
