<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/user_name_et"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/user_name"/>
    <EditText
        android:id="@+id/password_et"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:inputType="textPassword"
        android:hint="@string/password"/>

    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/register"/>
</LinearLayout>