<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/content_et"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:inputType="textMultiLine"
        android:maxLines="10"
        android:gravity="top"
        android:hint="@string/input_tip"/>
    <LinearLayout
        android:id="@+id/functions_btn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="10dp">
        <Button
            android:id="@+id/push_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_style"
            android:text="@string/push"/>
        <Button
            android:id="@+id/clear_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_style"
            android:layout_marginLeft="6dp"
            android:text="@string/clear"/>
        <Button
            android:id="@+id/pull_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_style"
            android:layout_marginLeft="6dp"
            android:text="@string/pull"/>
    </LinearLayout>
    <Button
        android:id="@+id/copy_btn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/button_style"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="8dp"
        android:text="@string/copy"/>
</LinearLayout>